@@ -1,5 +1,6 @@
 --------------------------
 Changes in 1.9 (not yet released)
+- Fix .dae/Collada writer to export a right-handed coordinate system as expected by Collada
 - Switch Collada writer to utf8 xml's.
 - Add IXMLWriterUTF8 
 - IColladaMeshWriter::writeScene got an additional flag to decide if root should be written.
